--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>My Chat App</title>
   </head>
 <body>
-  <h1>Welcome to my serverless chat app</h1>
+  <h1>Welcome to my frontend app</h1>
   <button onclick="fetch('/api/hello').then(r=>r.text()).then(alert)">Say Hello</button>
 </body>
 </html>
